# aesiron-armory

./: .gitignore  Makefile  README.md  pyproject.toml
build-keeper-electron/: .gitignore  README.md  compose.yml
build-keeper-electron/backend/: Dockerfile  package.json
build-keeper-electron/backend/src/: index.ts
build-keeper-electron/backend/src/__tests__/: equipment-manager.test.ts
build-keeper-electron/backend/src/core/: config-manager.ts  equipment-manager.ts
build-keeper-electron/backend/src/data/: app_config.json
build-keeper-electron/backend/src/types/: index.ts
build-keeper-electron/frontend/src/: App.tsx.bak  App.tsx.test  main.tsx
build-keeper-electron/frontend/src/hooks/: useSets.ts
build_keeper/: .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  compose.yml
build_keeper/app/: app.py
build_keeper/app/.streamlit/: config.toml
build_keeper/app/core/: config_manager.py  equipment_catalog.py  equipment_manager.py  logger.py  page.py  settings.py
build_keeper/app/pages/: 1_Cadastro.py  2_Edicao_Em_Massa.py
build_keeper/app/ui/: components.py  styles.py  views.py
